--- a/app/src/main/res/layout/activity_petunjuk.xml
+++ b/app/src/main/res/layout/activity_petunjuk.xml
@@ -216,7 +216,7 @@
                 android:layout_height="@dimen/_300sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/daftarsewamenunggu" />
+                android:background="@drawable/adaptermununggu" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -237,7 +237,7 @@
                 android:layout_height="@dimen/_300sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/daftarsewamenunggu" />
+                android:background="@drawable/detailtransaksi" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -258,7 +258,7 @@
                 android:layout_height="@dimen/_300sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/img_no_image" />
+                android:background="@drawable/adaptersewa" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -279,7 +279,7 @@
                 android:layout_height="@dimen/_300sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/img_no_image" />
+                android:background="@drawable/adapterhistori" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -300,7 +300,7 @@
                 android:layout_height="@dimen/_300sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/img_no_image" />
+                android:background="@drawable/pilihakun" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -321,7 +321,7 @@
                 android:layout_height="@dimen/_300sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/img_no_image" />
+                android:background="@drawable/pilihprofil" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -342,7 +342,7 @@
                 android:layout_height="@dimen/_300sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/img_no_image" />
+                android:background="@drawable/profil" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -363,7 +363,7 @@
                 android:layout_height="@dimen/_300sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/img_no_image" />
+                android:background="@drawable/pilihpassword" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -384,28 +384,28 @@
                 android:layout_height="@dimen/_300sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/img_no_image" />
+                android:background="@drawable/ubahpassword" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:fontFamily="@font/quicksand_bold"
-                android:text="18. Langkah kedelapan belas"
-                android:textColor="@color/black" />
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="@dimen/_10sdp"-->
+<!--                android:fontFamily="@font/quicksand_bold"-->
+<!--                android:text="18. Langkah kedelapan belas"-->
+<!--                android:textColor="@color/black" />-->
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:text="@string/langkah18" />
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="@dimen/_16sdp"-->
+<!--                android:text="@string/langkah18" />-->
 
-            <ImageView
-                android:layout_width="@dimen/_200sdp"
-                android:layout_height="@dimen/_300sdp"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:background="@drawable/img_no_image" />
+<!--            <ImageView-->
+<!--                android:layout_width="@dimen/_200sdp"-->
+<!--                android:layout_height="@dimen/_300sdp"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginTop="@dimen/_5sdp"-->
+<!--                android:background="@drawable/img_no_image" />-->
         </LinearLayout>
 
     </ScrollView>
