--- a/app/src/main/res/layout/adapter_menunggu.xml
+++ b/app/src/main/res/layout/adapter_menunggu.xml
@@ -10,6 +10,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
+        android:id="@+id/layoutmenunggu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/_8sdp">
