--- a/app/src/main/res/layout/dialog_bukti.xml
+++ b/app/src/main/res/layout/dialog_bukti.xml
@@ -70,12 +70,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/imvBuktipembayaran"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/img_add_image" />
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_130sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/img_add_image"
+                app:riv_corner_radius="@dimen/_8sdp" />
 
 <!--            <TextView-->
 <!--                android:id="@+id/layout_rekeninge3"-->
@@ -91,8 +93,8 @@
                 android:id="@+id/layout_rekeninge3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="@dimen/_30sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:background="@drawable/bg_btn_lapisanhijau">
 
 
