--- a/app/src/main/res/layout/fragment_akun.xml
+++ b/app/src/main/res/layout/fragment_akun.xml
@@ -66,7 +66,7 @@
             <LinearLayout
                 android:id="@+id/linJasa"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_300sdp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
@@ -360,7 +360,6 @@
                     android:background="@color/teal_700"/>
 
                 <RelativeLayout
-                    android:id="@+id/btn_tentang"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
@@ -368,38 +367,32 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:background="@color/white">
 
-                    <ImageView
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:layout_marginTop="@dimen/_3sdp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:src="@drawable/ic_baseline_keyboard_"
-                        app:tint="@color/teal_700" />
-
-                    <ImageView
-                        android:id="@+id/imvpetunjuk"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:src="@drawable/ic_baseline_install_mobile_24"
-                        app:tint="@color/teal_700" />
-
-                    <TextView
-                        android:id="@+id/Labeltentang"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_toEndOf="@+id/imvpetunjuk"
-                        android:text="Tentang"
-                        android:textColor="@color/black" />
+                        android:gravity="start"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/Labeltentang"
-                        android:layout_toEndOf="@+id/imvpetunjuk"
-                        android:text="Tentang Pembuat Aplikasi Ini"
-                        android:textColor="@color/teal_700" />
+                        <ImageView
+                            android:layout_width="@dimen/_22sdp"
+                            android:layout_height="@dimen/_22sdp"
+                            android:src="@drawable/ic_baseline_logout_24"
+                            android:gravity="center"
+                            android:layout_marginTop="@dimen/_2sdp"
+                            android:layout_marginEnd="@dimen/_5sdp"
+                            app:tint="@color/teal_700" />
+
+                        <TextView
+                            android:id="@+id/txvLogout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Logout"
+                            android:textSize="@dimen/_16sdp"
+                            android:fontFamily="@font/quicksand_bold"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
 
                 </RelativeLayout>
 
@@ -410,32 +403,6 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_7sdp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="@dimen/_22sdp"
-                    android:layout_height="@dimen/_22sdp"
-                    android:src="@drawable/ic_baseline_logout_24"
-                    android:gravity="center"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:layout_marginEnd="@dimen/_5sdp"
-                    app:tint="@color/white" />
-
-                <TextView
-                    android:id="@+id/txvLogout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Logout"
-                    android:textSize="@dimen/_16sdp"
-                    android:fontFamily="@font/quicksand_bold"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
 
 
         </LinearLayout>
