--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -67,14 +67,14 @@
             android:background="@color/teal_700"
             android:orientation="horizontal">
 
-            <ImageView
-            android:id="@+id/imvkategori"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:src="@drawable/menu"
-            android:layout_gravity="center"
-            android:layout_marginStart="@dimen/_15sdp"
-            app:tint="@color/white" />
+<!--            <ImageView-->
+<!--            android:id="@+id/imvkategori"-->
+<!--            android:layout_width="@dimen/_20sdp"-->
+<!--            android:layout_height="@dimen/_20sdp"-->
+<!--            android:src="@drawable/menu"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginStart="@dimen/_15sdp"-->
+<!--            app:tint="@color/white" />-->
 
             <!--            <Spinner-->
             <!--                android:id="@+id/imvkategori"-->
