--- a/app/src/main/res/layout/fragment_selesai.xml
+++ b/app/src/main/res/layout/fragment_selesai.xml
@@ -13,17 +13,50 @@
         android:paddingBottom="@dimen/_45sdp"
         android:orientation="vertical"
         >
-    <TextView
-        android:layout_marginTop="@dimen/_18sdp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:text="Transaksi Selesai"
-        android:textColor="@color/black"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="Transaksi Selesai"
+                android:textColor="@color/black" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:gravity="end">
+
+                <LinearLayout
+                    android:id="@+id/lin_refreshselesai"
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:backgroundTint="@color/teal_700"
+                    android:background="@drawable/bg_gradasiatasabawahradiuskecil">
+
+                    <ImageView
+                        android:layout_width="@dimen/_25sdp"
+                        android:layout_height="@dimen/_25sdp"
+                        android:layout_gravity="end"
+                        android:background="@drawable/ic_baseline_refresh_24"
+                        android:backgroundTint="@color/white" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
 
-    <androidx.recyclerview.widget.RecyclerView
+
+        <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvSelesai"
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_width="match_parent"
@@ -32,16 +65,63 @@
         <LinearLayout
             android:id="@+id/layoutdatakosongselesai"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:orientation="vertical"
             android:visibility="gone"
-            android:layout_height="@dimen/_100sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:background="@drawable/bg_btn_lapisanhijau"
-            android:gravity="center"
-            >
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/gambardatakosong3"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:src="@drawable/datakosong"
+                app:riv_corner_radius="@dimen/_8sdp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/quicksand_bold"
                 android:gravity="center"
-                android:text="Data Tidak Ada !!"/>
+                android:textColor="@color/black"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="Data Tidak Ada !!" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layoutkosongLogin3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@drawable/bg_btn_lapisanhijau"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/gambarkosonglogin3"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:src="@drawable/logindulu"
+                app:riv_corner_radius="@dimen/_8sdp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/quicksand_bold"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="Silakan login terlebih dahulu ya" />
         </LinearLayout>
 
 
