--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -171,7 +171,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tanggal *"
+            android:text="Waktu *"
             android:textStyle="bold"
             android:textSize="@dimen/_10sdp"
             android:layout_gravity="start"
@@ -186,19 +186,18 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/edt_tanggal"
+                <Spinner
+                    android:id="@+id/edt_waktu"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/_3sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:layout_marginStart="@dimen/_8sdp"
                     android:background="@color/white"
-                    android:hint="Tanggal"
-                    android:textStyle="bold"
+                    android:inputType="text"
                     android:textSize="@dimen/_11sdp" />
 
             </LinearLayout>
@@ -252,42 +251,6 @@
 
         </RelativeLayout>
 
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Harga *"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textSize="@dimen/_10sdp"-->
-<!--            android:layout_gravity="start"-->
-<!--            android:layout_marginTop="@dimen/_10sdp"-->
-<!--            android:textColor="@color/black" />-->
-
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="@dimen/_35sdp"-->
-<!--            android:layout_marginTop="@dimen/_5sdp"-->
-<!--            android:background="@drawable/bg_btn_lapisanhijau">-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/edt_harga"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginTop="@dimen/_8sdp"-->
-<!--                    android:layout_marginEnd="@dimen/_5sdp"-->
-<!--                    android:layout_marginStart="@dimen/_8sdp"-->
-<!--                    android:background="@color/white"-->
-<!--                    android:hint="Harga"-->
-<!--                    android:inputType="number"-->
-<!--                    android:textSize="@dimen/_11sdp" />-->
-
-<!--            </LinearLayout>-->
-
-<!--        </RelativeLayout>-->
 
         <Button
             android:id="@+id/btn_booking"
